[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "isms-mcp"
version = "0.1.0"
description = "Read-only Model Context Protocol overlay for the ISMS workspace."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "isms-mcp contributors" }]
keywords = ["mcp", "iso27001", "nisg", "gdpr", "isms", "compliance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "mcp>=1.12",
  "pydantic>=2.6",
  "ruamel.yaml>=0.18",
  "jsonschema>=4.21",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
http = [
  "uvicorn>=0.30",
  "starlette>=0.37",
]

[project.scripts]
isms-mcp = "isms_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/rmednitzer/isms-mcp"
Issues = "https://github.com/rmednitzer/isms-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/isms_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/isms_mcp"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
